...
        textField.layer.cornerRadius = 5
        return textField
    }()
    
    lazy var buttonAdd: UIButton = {
        let button = UIButton()
        button.setTitle("Add", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = .systemCyan
        button.layer.cornerRadius = 5
        return button
    }()
    
...
