...
    lazy var coreDataButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("ToDo using CoreData", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = .systemBlue
        button.layer.cornerRadius = 8
        button.accessibilityIdentifier = "CoreData"
        return button
    }()
    
    lazy var realmButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("ToDo using Realm", for: .normal)
...
