...
        let table = UITableView()
        table.layer.cornerRadius = 8
        table.clipsToBounds =  true
        return table
    }()
    
    private(set) lazy var barButton: UIBarButtonItem = {
        let button = UIBarButtonItem()
        button.image = UIImage(systemName: "plus.circle")
        return button
    }()
    
    private(set) lazy var searchBar: UISearchBar = {
...
